<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rootView"
        android:layout_height="match_parent"
        android:orientation="vertical">
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="60dp">
        <ImageView
                android:id="@+id/iwLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/logo"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" tools:ignore="ContentDescription"/>
    <TextView
            android:padding="@dimen/padding_8"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:text="@string/authorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iwLogo"
    />
    <android.support.design.widget.TextInputLayout
            android:id="@+id/mLoginLayout"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:hint="@string/number_code"
            app:layout_constraintTop_toBottomOf="@id/iwLogo">
    <android.support.design.widget.TextInputEditText
                android:id="@+id/etLogin"
                style="@style/loginEditText"
                android:inputType="phone"
                android:maxLength="12"
                app:layout_constraintTop_toBottomOf="@id/iwLogo"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/mPassowrdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:hint="@string/password_hint"
            app:layout_constraintTop_toBottomOf="@id/mLoginLayout"
            app:passwordToggleEnabled="true"
    >
        <android.support.design.widget.TextInputEditText
                android:layout_marginTop="8dp"
                android:id="@+id/etPassword"
                style="@style/loginEditText"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/mLoginLayout"/>
    </android.support.design.widget.TextInputLayout>
        <Button
                android:foreground="@drawable/button"
                android:id='@+id/btnLogin'
                android:layout_width="130dp"
                android:layout_margin="@dimen/margin_8"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_back"
                app:layout_constraintTop_toBottomOf="@id/mPassowrdLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@android:color/white"
                android:text="@string/enter"
                app:layout_constraintEnd_toEndOf="parent"
              />
        <TextView
                android:id="@+id/tvForgetPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/large_text_size"
                android:layout_width="wrap_content"
                android:text="@string/forget_password"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="@id/mLoginLayout"
                android:padding="@dimen/padding_8"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="@dimen/margin_8"/>
        <Button
                android:foreground="@drawable/button"
                android:layout_marginTop="40dp"
                android:id="@+id/btnRegistration"
                android:layout_width="match_parent"
                android:background="@drawable/button_back_gray"
                android:layout_height="@dimen/button_height"
                app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"
                android:textColor="@android:color/white"
                android:text="@string/registration"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
        />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
